Prevent SSRF in MediacastUtil